--- a/.github/workflows/build-pr-ci.yml
+++ b/.github/workflows/build-pr-ci.yml
@@ -12,10 +12,8 @@ jobs:
         fetch-depth: 0
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v4
-      with: # NOTE: we don't need to install 6.x and 8.x cause they are included in windows-latest(windows-2022) image.
-        dotnet-version: |
-          7.x
-          9.x
+      with: # NOTE: we don't need to install 6.x, 8.x and 9.x cause they are included in windows-latest(windows-2022) image.
+        dotnet-version: 7.x
         
     - name: Build Reason
       run: "echo ref: ${{github.ref}} event: ${{github.event_name}}"
